# lifeOS

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  GAP_ANALYSIS.md  LLM_CONTEXT.md  README.md  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml
.context/: README.md  TODO.md  architecture.md  changelog.md  conventions.md  domains.md  manifest.yml  overview.md  pending.md  tests.md
.github/workflows/: ci.yml  deploy.yml
.windsurf/workflows/: fix-ci.md
alembic/: env.py
alembic/versions/: 6a88d45cecd6_initial_schema_for_single_user_mode.py
docs/: ARCHITECTURE_CONTRACT.md  SCHEMA_DESIGN.md  SYSTEM_DESIGN.md
scripts/: pre_push.sh  seed.py  start_app.sh  start_worker.sh  verify_llm.py
src/: config.py  dependencies.py  main.py
src/agents/: README.md  models.py  registry.py  repository.py  runtime.py  schemas.py
src/communication/: README.md  bootstrap.py  dispatcher.py  models.py  pipeline.py  repository.py  router.py  schemas.py  service.py
src/communication/adapters/: base.py  rest_api.py  telegram.py  whatsapp.py
src/connectors/: README.md  base.py  models.py  repository.py  schemas.py  service.py
src/core/: README.md  middleware.py  models.py  repository.py  router.py  schemas.py  service.py
src/domains/: README.md  loader.py  plugin.py
src/domains/dutch_tutor/: README.md  __init__.py  manifest.py  models.py  router.py  service.py
src/domains/finance/: README.md  __init__.py  manifest.py  models.py  router.py
src/domains/health/: README.md  __init__.py  manifest.py  models.py  router.py
src/domains/home/: README.md  __init__.py  manifest.py  models.py  router.py
src/domains/learning/: README.md  __init__.py  manifest.py  models.py  router.py
src/domains/productivity/: README.md  __init__.py  manifest.py  models.py  router.py
src/domains/relationships/: README.md  __init__.py  manifest.py  models.py  router.py
src/events/: README.md  bus.py  models.py  repository.py  router.py  schemas.py
src/kernel/: README.md  llm_client.py  orchestrator.py  prompt_registry.py  tool_registry.py
src/knowledge/: README.md  chunking.py  embedding.py  ingestion.py  models.py  repository.py  schemas.py  tagging.py
src/knowledge/parsers/: document.py  html.py  pdf.py  youtube.py
src/memory/: README.md  assembler.py  consolidation.py  models.py  repository.py  router.py  schemas.py  semantic.py  service.py  short_term.py  structured.py
src/orchestration/: README.md  engine.py  models.py  repository.py  schemas.py
src/retrieval/: README.md  coordinator.py  keyword_retriever.py  reranker.py  schemas.py  semantic_retriever.py  structured_retriever.py
src/scheduling/: README.md  models.py  repository.py  scheduler.py  schemas.py  worker.py
src/shared/: README.md  base_model.py  crypto.py  database.py  pagination.py  sql_types.py  time.py
tests/: README.md  conftest.py  test_agents.py  test_events.py  test_kernel.py  test_knowledge.py  test_retrieval.py  test_schemas.py  test_shared.py
tests/arch/: test_architecture_contract.py  test_domain_integration.py  test_domain_manifests.py  test_requirement_coverage.py  test_scenario_generator.py
tests/drift/: conftest.py  test_intent_classification.py
tests/e2e/: conftest.py  test_message_to_response.py
tests/integration/: conftest.py  test_dutch_tutor_flow.py  test_event_flow.py  test_knowledge_flow.py  test_tool_agent_flow.py
tests/requirements/: dutch_tutor.py  finance.py  health.py  home.py  learning.py  platform.py  productivity.py  relationships.py
tests/unit/: conftest.py
tests/unit/test_agents/: test_registry.py  test_schemas.py
tests/unit/test_communication/: test_schemas.py  test_telegram_adapter.py
tests/unit/test_connectors/: test_schemas.py
tests/unit/test_core/: test_schemas.py
tests/unit/test_domains/: test_dutch_tutor_service.py
tests/unit/test_events/: test_bus.py
tests/unit/test_kernel/: test_orchestrator_dutch_tutor.py  test_prompt_registry.py  test_tool_registry.py
tests/unit/test_knowledge/: test_chunking.py
tests/unit/test_memory/: test_schemas.py  test_service.py
tests/unit/test_orchestration/: test_schemas.py
tests/unit/test_retrieval/: test_reranker.py  test_schemas.py
tests/unit/test_scheduling/: test_schemas.py
tests/unit/test_shared/: test_crypto.py  test_pagination.py  test_time.py
