[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-life-os"
version = "0.1.0"
description = "AI-native multi-tenant life operating system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.4",

    # Redis
    "redis[hiredis]>=5.0.0",

    # LLM / AI
    "litellm>=1.30.0",
    "langchain-text-splitters>=0.0.1",
    "instructor>=1.0.0",
    "openai>=1.12.0",

    # Scheduling
    "apscheduler>=3.10.4",
    "arq>=0.25.0",

    # Config & validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # Logging
    "structlog>=24.1.0",

    # HTTP client
    "httpx>=0.27.0",

    # Crypto
    "cryptography>=42.0.0",

    # Utilities
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "aiosqlite>=0.20.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = ["E501", "B008"]  # B008: FastAPI Query() in defaults is standard pattern

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["redis.*", "arq.*", "apscheduler.*", "litellm.*", "pgvector.*", "instructor.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "req(id): Link test to a product requirement by ID (e.g. REQ-HEALTH-001)",
    "scenario(id): Link test to a generated scenario by ID (e.g. SCN-REQ-PLAT-001-01)",
    "drift: Nightly real-LLM drift test (requires RUN_DRIFT_TESTS=1 and OPENAI_API_KEY)",
]
